Checkout the HEAD of PR via the `action/checkout`.

--- a/.github/workflows/ensure-license-reports-modified.yml
+++ b/.github/workflows/ensure-license-reports-modified.yml
@@ -15,7 +15,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
         with:
-          ref: $GITHUB_HEAD_REF
+          ref: ${{ github.event.pull_request.head.sha }}
 
       - name: Check that `pom.xml` and `license-report.md` are modified
         shell: bash
