--- a/.github/workflows/ensure-license-reports-modified.yml
+++ b/.github/workflows/ensure-license-reports-modified.yml
@@ -15,7 +15,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
         with:
-          ref: ${{ github.event.pull_request.head.sha }}
+          ref: master
 
       - name: Check that `pom.xml` and `license-report.md` are modified
         shell: bash
