--- a/.github/workflows/ensure-license-reports-modified.yml
+++ b/.github/workflows/ensure-license-reports-modified.yml
@@ -15,7 +15,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
         with:
-          ref: ${{ secrets.GITHUB_HEAD_REF }}
+          fetch-depth: 0
 
       - name: Check that `pom.xml` and `license-report.md` are modified
         shell: bash
