--- a/.github/workflows/detekt-analysis.yml
+++ b/.github/workflows/detekt-analysis.yml
@@ -15,11 +15,11 @@ name: Scan with Detekt
 on:
   # Triggers the workflow on push or pull request events but only for default and protected branches
   push:
-    branches: [ master, *master* ]
+    branches: [ master ]
   pull_request:
     branches: [ master ]
   schedule:
-     - cron: '21 2 * * 5'
+     - cron: '19 17 * * 4'
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
