--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,12 @@ all modules and does not describe the project structure per-subproject.
     <scope>compile</scope>
   </dependency>
   <dependency>
+    <groupId>com.google.truth</groupId>
+    <artifactId>truth</artifactId>
+    <version>1.1.2</version>
+    <scope>compile</scope>
+  </dependency>
+  <dependency>
     <groupId>com.google.truth.extensions</groupId>
     <artifactId>truth-java8-extension</artifactId>
     <version>1.1.3</version>
