--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@ all modules and does not describe the project structure per-subproject.
 
 <groupId>io.spine</groupId>
 <artifactId>spine-core-java</artifactId>
-<version>2.0.0-SNAPSHOT.61</version>
+<version>2.0.0-SNAPSHOT.67</version>
 
 <inceptionYear>2015</inceptionYear>
 
@@ -64,31 +64,31 @@ all modules and does not describe the project structure per-subproject.
   <dependency>
     <groupId>io.spine</groupId>
     <artifactId>spine-base</artifactId>
-    <version>2.0.0-SNAPSHOT.59</version>
+    <version>2.0.0-SNAPSHOT.67</version>
     <scope>compile</scope>
   </dependency>
   <dependency>
     <groupId>io.spine</groupId>
     <artifactId>spine-base-types</artifactId>
-    <version>2.0.0-SNAPSHOT.59</version>
+    <version>2.0.0-SNAPSHOT.64</version>
     <scope>compile</scope>
   </dependency>
   <dependency>
     <groupId>io.spine</groupId>
     <artifactId>spine-time</artifactId>
-    <version>2.0.0-SNAPSHOT.59</version>
+    <version>2.0.0-SNAPSHOT.64</version>
     <scope>compile</scope>
   </dependency>
   <dependency>
     <groupId>io.spine.tools</groupId>
     <artifactId>spine-mc-java</artifactId>
-    <version>2.0.0-SNAPSHOT.59</version>
+    <version>2.0.0-SNAPSHOT.67</version>
     <scope>compile</scope>
   </dependency>
   <dependency>
     <groupId>io.spine.tools</groupId>
     <artifactId>spine-plugin-base</artifactId>
-    <version>2.0.0-SNAPSHOT.59</version>
+    <version>2.0.0-SNAPSHOT.67</version>
     <scope>compile</scope>
   </dependency>
   <dependency>
@@ -148,19 +148,19 @@ all modules and does not describe the project structure per-subproject.
   <dependency>
     <groupId>io.spine.tools</groupId>
     <artifactId>spine-plugin-testlib</artifactId>
-    <version>2.0.0-SNAPSHOT.59</version>
+    <version>2.0.0-SNAPSHOT.67</version>
     <scope>test</scope>
   </dependency>
   <dependency>
     <groupId>io.spine.tools</groupId>
     <artifactId>spine-testlib</artifactId>
-    <version>2.0.0-SNAPSHOT.59</version>
+    <version>2.0.0-SNAPSHOT.67</version>
     <scope>test</scope>
   </dependency>
   <dependency>
     <groupId>io.spine.tools</groupId>
     <artifactId>spine-testutil-time</artifactId>
-    <version>2.0.0-SNAPSHOT.59</version>
+    <version>2.0.0-SNAPSHOT.64</version>
     <scope>test</scope>
   </dependency>
   <dependency>
@@ -191,13 +191,14 @@ all modules and does not describe the project structure per-subproject.
   </dependency>
   <dependency>
     <groupId>io.spine.tools</groupId>
-    <artifactId>spine-javadoc-filter</artifactId>
-    <version>2.0.0-SNAPSHOT.59</version>
+    <artifactId>spine-mc-java-checks</artifactId>
+    <version>2.0.0-SNAPSHOT.67</version>
+    <scope>provided</scope>
   </dependency>
   <dependency>
     <groupId>io.spine.tools</groupId>
     <artifactId>spine-mc-java-protoc</artifactId>
-    <version>2.0.0-SNAPSHOT.59</version>
+    <version>2.0.0-SNAPSHOT.67</version>
   </dependency>
   <dependency>
     <groupId>net.sourceforge.pmd</groupId>
