--- a/buildSrc/src/main/groovy/javac-args.gradle
+++ b/buildSrc/src/main/groovy/javac-args.gradle
@@ -28,6 +28,9 @@
  * This script configures Java Compiler.
  */
 
+println("`javac-args.gradle` script is deprecated. " +
+        "Please use `JavaCompileConfig` and `ErrorProneConfig` utilities instead.")
+
 tasks.withType(JavaCompile) {
 
     if (JavaVersion.current() != JavaVersion.VERSION_1_8) {
