--- a/buildSrc/src/main/groovy/slow-tests.gradle
+++ b/buildSrc/src/main/groovy/slow-tests.gradle
@@ -24,6 +24,9 @@
  * OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
  */
 
+println("`slow-tests.gradle` script is deprecated. " +
+        "Please use `TestContainer.registerTestTasks()` instead.")
+
 final def slowTag = 'slow' // See io.spine.testing.SlowTest
 
 task fastTest(type: Test) {
@@ -42,5 +45,6 @@ task slowTest(type: Test) {
     useJUnitPlatform {
         includeTags slowTag
     }
+
     shouldRunAfter fastTest
 }
